PROJECT( Database )

CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

SET( CMAKE_CXX_STANDARD 17 )

SET( INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include )
SET( SOURCE_DIR ${PROJECT_SOURCE_DIR}/src )

INCLUDE_DIRECTORIES(
    ${INCLUDE_DIR}
)

FILE( GLOB_RECURSE SOURCES ${SOURCE_DIR}/*.cpp )

ADD_EXECUTABLE( ${PROJECT_NAME} ${SOURCES} )