PROJECT( Database )

CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

FIND_PACKAGE( Threads ) # added

SET( CMAKE_CXX_STANDARD 17 )

SET( CMAKE_CXX_FLAGS_DEBUG  "-g" )

SET( INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include )
SET( SOURCE_DIR ${PROJECT_SOURCE_DIR}/src )
SET( THIRD_PARTY ${PROJECT_SOURCE_DIR}/third-party )

INCLUDE_DIRECTORIES(
    ${INCLUDE_DIR}
    ${THIRD_PARTY}
)

FILE( GLOB_RECURSE SOURCES ${SOURCE_DIR}/*.cpp )

ADD_EXECUTABLE( ${PROJECT_NAME} ${SOURCES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT}) # added